--- a/style.css
+++ b/style.css
@@ -1,4 +1,59 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+    font-family: Verdana;
+    background-color:black;
+}
 
+#container {
+    width: 550px;
+}
 
+div{
+    background-color: white;
+	color: black;
+    text-shadow: 0px 0px 1px black;
+	padding: 20px;
+	border-radius: 25px;
+	text-align: center;
+	justify-content: center;
+	margin: auto;
+    
+}
+
+h1{
+    color:grey;
+    margin: 10px 10px 10px 10px;
+    text-shadow: 0px 0px 0px black;
+    text-align: center;
+}
+
+table{
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 3px;
+    border-width: 15px;
+
+}
+
+#ta {
+    width: 200px;
+}
+tr , th , td  {
+    padding: 5px;
+}
+
+mark{
+    background-color:yellow;
+}
+
+p{
+    display: none;
+    text-shadow: 0px 0px 1px black;
+}
+
+footer{
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+
+}
